--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Indian Book House</title>
+    <title>Indian Books House | Admin Panel</title>
   </head>
   <body>
     <div id="root"></div>
